# jyotish-api-fastapi

./: .api_url  .dockerignore  .gitignore  API_AUDIT_REPORT.md  API_ENDPOINTS_COMPLETE.md  AUDITORIA_API_COMPLETA.md  AUDITORIA_ENDPOINTS_FRONTEND.md  AUDIT_FINAL_REPORT.md  AUDIT_SUMMARY.md  CHESTA_BALA_IMPLEMENTATION_SUMMARY.md  CLEANUP_COMPLETED.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CLOUD_RUN_DEPLOYMENT.md  CORS_OPTIMIZATION_REPORT.md  CORS_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FRONTEND_BACKEND_CONFIG.md  FRONTEND_INTEGRATION.md  LICENSE  OPTIMIZATION_GUIDE.md  PANCHANGA_PRECISION_IMPROVEMENTS.md  PANCHANGA_YOGAS_FIX.md  PR_SUMMARY.md  README.md  REPORTE_CALENDARIO_NAKSHATRA.md  ROBUSTNESS_IMPROVEMENTS.md  SERVICES_SUMMARY.md  STATUS.md  UNIFICATION_REPORT.md  benchmark.py  calculate_offset.py  cleanup-global.sh  cloud-run-config.yaml  cloudbuild.yaml  debug_ravi_yoga.py  deploy-cloud-run.sh  deploy-full.sh  (+23 more)
.github/workflows/: ci.yml  deploy-cloud-run.yml
app/: __init__.py  config.py  main.py
app/middleware/: __init__.py  auth.py  circuit_breaker.py  metrics.py  performance.py  rate_limit.py
app/models/: requests.py
app/routers/: __init__.py  calendar.py  chesta_bala.py  ephemeris.py  ephemeris_optimized.py  health.py  motion.py  navatara.py  panchanga_precise.py  places.py  yogas.py
app/services/: astronomical.py  cache.py  chesta_bala.py  (+13 more)
rules/: panchanga_rules.json
src/: env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
tests/: test_panchanga_math.py  test_performance.py  test_swe_basics.py  test_yogas_rules.py
(+3 files in other folders)
